--- a/index.html
+++ b/index.html
@@ -14,13 +14,19 @@
       <!-- <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-2/hacksaw.jpeg" alt="Hacksaw Brushes"> -->
       <video src="./resources/videos/excursion.mp4" autoplay> Video not supported </video>
     </div>
-    <div> <!-- Section with Image -->
+    <div> <!-- Second Section with Image -->
       <h2>Your personal travel guide</h2>
       <p class="guide">Excursion remembers places you like, and recommends new points of interest around you.</p>
-      <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/camp.jpg" alt="Camping Picture">
-      <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/phone.png" alt="Cell Phone icon"
+      <p>
+        <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/camp.jpg" alt="Camping Picture">
+      </p>
+      <p>
+        <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/phone.png" alt="Cell Phone icon">
+      </p>
       <h2>Coming Soon for iPhone and Android</h2>
       <a class = "video" href=""> Download Excursion (Coming Soon) </a>
     </div>
+    <div>  <!-- Page footer -->
+      <p class="footer"> © Excursion<p>
   </body>
 </html>
