Modified code to play video on auto play and loop

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <br>
       <br>
       <!-- <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-2/hacksaw.jpeg" alt="Hacksaw Brushes"> -->
-      <video src="./resources/videos/excursion.mp4" autoplay> Video not supported </video>
+      <video src="./resources/videos/excursion.mp4" autoplay loop> Video not supported </video>
     </div>
     <div> <!-- Second Section with Image -->
       <h2>Your personal travel guide</h2>
@@ -27,6 +27,7 @@
       <a class = "video" href=""> Download Excursion (Coming Soon) </a>
     </div>
     <div>  <!-- Page footer -->
-      <p class="footer"> © Excursion<p>
+      <p class="footer"> © Excursion</p>
+    </div>
   </body>
 </html>
